--- a/starter-kits/bootstrap/source/default/patterns/03-organisms/footer/footer.twig
+++ b/starter-kits/bootstrap/source/default/patterns/03-organisms/footer/footer.twig
@@ -1,8 +1,8 @@
 <footer class="body-font mt-5">
   {% embed "@organisms/container/container.twig" %}
     {% block content %}
-      <div class="d-block d-lg-flex py-24">
-        <div class="flex-shrink-0 md:mx-0 mx-auto text-center mb-4">
+      <div class="d-block d-lg-flex py-20">
+        <div class="flex-shrink-0 mx-md-0 mx-auto text-center mb-4">
           {% include "@atoms/logo/logo.twig" only %}
           <p class="mt-2 text-sm text-gray-500">Air plant banjo lyft occupy retro adaptogen indego</p>
         </div>
@@ -29,7 +29,7 @@
   {% endembed %}
   </div>
   <div class="bg-light">
-    <div class="container py-4 px-6 d-flex flex-wrap flex-column flex-sm-row">
+    <div class="container py-4 px-5 d-flex flex-wrap flex-column flex-sm-row">
       <p class="text-gray-500 text-sm text-center text-lg-left">© 2020 tailblocks —
         <a href="https://twitter.com/knyttneve" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@Wingsuit</a>
       </p>
