--- a/starter-kits/bootstrap/source/default/patterns/04-templates/article/article.twig
+++ b/starter-kits/bootstrap/source/default/patterns/04-templates/article/article.twig
@@ -5,14 +5,14 @@
       content: headline, element: "h1"
     } only %}
   </div>
-  <div class="d-block d-md-flex group row pt-10">
-    <div class="col-12 col-md-2 pb-8">
+  <div class="row pt-5">
+    <div class="col-12 col-md-6 pb-5 pb-md-0">
       {% block image %}
         {{ image }}
       {% endblock %}
     </div>
-    <div class="col-12 col-md-2 pl-md-4">
-      <div class="text-base mb-10 text-gray-dark font-sans">
+    <div class="col-12 col-md-6 pl-md-4">
+      <div class="text-base mb-5 text-gray-dark font-sans">
         {% block text %}
           {{ text }}
         {% endblock %}
