--- a/starter-kits/bootstrap/source/default/patterns/01-atoms/link/link.twig
+++ b/starter-kits/bootstrap/source/default/patterns/01-atoms/link/link.twig
@@ -16,7 +16,7 @@
   {% set tag_name = 'a' %}
 {% endif %}
 
-<{{ tag_name }} {{ attributes.addClass(['text-pink-500 inline-flex items-center  md:mb-2 lg:mb-0'] | sort | join(' ') | trim) }}>
+<{{ tag_name }} {{ attributes.addClass(['text-pink d-inline-flex align-items-center  mb-md-2 mb-lg-0'] | sort | join(' ') | trim) }}>
 {{ text }}
   {% if icon is not empty %}
     {% include "@atoms/svg/_svg--icon.twig" with {
