(Feature) Add bootstrap javascript support.

--- a/starter-kits/bootstrap/source/default/patterns/02-molecules/accordion-item/accordion-item.twig
+++ b/starter-kits/bootstrap/source/default/patterns/02-molecules/accordion-item/accordion-item.twig
@@ -13,15 +13,15 @@
 
 <div id="accordion">
   <div class="card">
-    <div class="card-header" id="{{ id }}">
+    <div class="card-header">
       <h5 class="mb-0">
-        <button class="btn btn-block btn-link text-left" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        <button class="btn btn-block btn-link text-left" data-toggle="collapse" data-target="#acc-{{ id }}" aria-expanded="true" aria-controls="collapseOne">
           {{ label }}
         </button>
       </h5>
     </div>
 
-    <div id="collapseOne" class="collapse" aria-labelledby="{{ id }}" data-parent="#accordion">
+    <div id="acc-{{ id }}" class="collapse" aria-labelledby="{{ id }}" data-parent="#accordion">
       <div class="card-body">
         {{ content }}
       </div>
