--- a/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
@@ -10,7 +10,6 @@
 {#
   Classes
 #}
-
 {% set classes = [
   'flex items-center justify-center inline-flex border-2 py-2 px-5 focus:outline-none rounded transition-colors duration-500',
   expanded ? 'w-full',
@@ -18,6 +17,8 @@
   icon_alignment == 'left' ? 'flex-row-reverse' : 'flex-row',
   pattern_configuration('button', variant, 'colors')[color],
   pattern_configuration('button', variant, 'size')['text'][size],
+  round ? 'round'
+
 ] %}
 
 {% set icon_size = ([
