(Feature) Add bootstrap javascript files.

--- a/starter-kits/bootstrap/apps/drupal/templates/misc/status-messages.html.twig
+++ b/starter-kits/bootstrap/apps/drupal/templates/misc/status-messages.html.twig
@@ -30,7 +30,7 @@
 } %}
 {% set messages_attributes = attributes %}
 {% embed '@organisms/container/container.twig' with {
-  padding_top: '',
+  padding_top: 'small',
   padding_bottom: 'default',
   message_list: message_list,
   messages_attributes: messages_attributes
