--- a/starter-kits/bootstrap/source/default/patterns/02-molecules/hero/hero.twig
+++ b/starter-kits/bootstrap/source/default/patterns/02-molecules/hero/hero.twig
@@ -11,7 +11,7 @@
 
 <section class="text-muted body-font">
   <div class="d-flex row flex-md-row flex-column align-items-center">
-    <div class="d-flex flex-column  align-items-center text-center col-md pr-md-4 align-items-md-start text-md-left mb-4 mb-md-0 flex-lg-grow pr-lg-5">
+    <div class="d-flex pt-10 flex-column  align-items-center text-center col-md pr-md-4 align-items-md-start text-md-left mb-4 mb-md-0 flex-lg-grow pr-lg-5">
       <div class="text-uppercase w-100">{{ pre_headline }}</div>
       <h1 class="text-secondary">{{ headline }}</h1>
       <div class="mb-4">{{ text }}</div>
