Add support to ws generate-component for scss.
Add supportFeature function to presets to enable generate to check if a feature like scss is supported.

--- a/packages/cli/src/generators/component/templates/ds/base/index.js.ejs
+++ b/packages/cli/src/generators/component/templates/ds/base/index.js.ejs
@@ -1,6 +1,7 @@
 /**
  * <%= name %>
  */
-<% if (useCss) { %>import './<%= name %>.css';<% } %><% if (useJs) { %>
+<% if (useCss) { %>import './<%= name %>.css';<% } %>
+<% if (useScss) { %>import './<%= name %>.scss';<% } %><% if (useJs) { %>
 import './<%= name %>.behavior';
 <% } %>
