--- a/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
@@ -7,13 +7,8 @@
 {% endif %}
 
 {# CARD CLASSES #}
-{% set image_classes = ([
-  alignment == 'center'?'justify-center': '',
-  'flex',
-]) | sort | join(' ') | trim %}
-
 {% set link_classes = ([
-  alignment == 'center'?'mx-auto': '',
+  alignment == 'center' ? 'mx-auto': '',
   'text-indigo-500', 'inline-flex', 'md:mb-2', 'lg:mb-0',
 ]) | sort | join(' ') | trim %}
 
@@ -21,40 +16,42 @@
   alignment == 'center' ? 'text-center rounded': '',
   bg_color == 'gray' ? 'bg-gray-200',
   bg_color == 'blue' ? 'bg-blue-200',
-  'w-full flex flex-grow max-w-xl',
-] | sort | join(' ') | trim )%}
+  'w-full flex  max-w-xl',
+  'border-2 border-gray-200 rounded-lg overflow-hidden w-full',
+  variant == 'horizontal' ? 'flex-col md:flex-row' : 'flex-col'
+] | sort | join(' ') | trim ) %}
 
 {% set attributes = attributes|default(create_attribute()).addClass(classes) %}
 
 {# TEMPLATE #}
 <{{ element }} {{ attributes }}>
-  <div class="border-2 border-gray-200 rounded-lg overflow-hidden w-full">
-    {% if image is not empty %}
+  {% if image is not empty %}
+    <div class="flex-1">
       {% block image %}
         {{ image }}
       {% endblock %}
-    {% endif %}
-    <div class="p-6">
-      <div class="tracking-widest text-lg title-font font-medium text-gray-500 mb-1">
-        {% block preheadline %}
-          {{ preheadline }}
-        {% endblock %}
-      </div>
-      <h2 class="title-font text-2xl font-medium text-gray-900 mb-3">
-        {% block headline %}
-          {{ headline }}
-        {% endblock %}
-      </h2>
-      <div class="leading-relaxed mb-3">
-        {% block text %}
-          {{ text }}
-        {% endblock %}
-      </div>
-      <div class="{{ link_classes }}">
-        {% block link %}
-          {{ link }}
-        {% endblock %}
-      </div>
+    </div>
+  {% endif %}
+  <div class="p-6 flex-1">
+    <div class="tracking-widest text-lg title-font font-medium text-gray-500 mb-1">
+      {% block preheadline %}
+        {{ preheadline }}
+      {% endblock %}
+    </div>
+    <h2 class="title-font text-2xl font-medium text-gray-900 mb-3">
+      {% block headline %}
+        {{ headline }}
+      {% endblock %}
+    </h2>
+    <div class="leading-relaxed mb-3">
+      {% block text %}
+        {{ text }}
+      {% endblock %}
+    </div>
+    <div class="{{ link_classes }}">
+      {% block link %}
+        {{ link }}
+      {% endblock %}
     </div>
   </div>
 </{{ element }}>
