--- a/starter-kits/tailwind/apps/storybook/patterns/05-pages/article/article.twig
+++ b/starter-kits/tailwind/apps/storybook/patterns/05-pages/article/article.twig
@@ -11,9 +11,9 @@
   {% block main %}
     {% set more %}
       {% set cells = [
-        pattern_preview('card', null, {'image': null}),
-        pattern_preview('card'),
-        pattern_preview('card')
+        pattern_preview('card', 'default', {'image': null}),
+        pattern_preview('card', 'default'),
+        pattern_preview('card', 'default')
         ] %}
       {% embed '@organisms/grid/grid.twig' with {config: 'equal', columns: 3, gutter: 'default', cells: cells} %}
       {% endembed %}
