--- a/starter-kits/tailwind/apps/storybook/patterns/05-pages/homepage/homepage.twig
+++ b/starter-kits/tailwind/apps/storybook/patterns/05-pages/homepage/homepage.twig
@@ -17,13 +17,13 @@
         {% include "@atoms/rich-text/rich-text.twig" with { text: "<h2 class=text-center>Section title</h2>" }%}
       {% endblock %}
       {% block column_1 %}
-        {{ pattern_preview('card') }}
+        {{ pattern_preview('card', 'default') }}
       {% endblock %}
       {% block column_2 %}
-        {{ pattern_preview('card', '', {'headline': ' Second Card'}) }}
+        {{ pattern_preview('card', 'default', {'headline': ' Second Card'}) }}
       {% endblock %}
       {% block column_3 %}
-        {{ pattern_preview('card') }}
+        {{ pattern_preview('card', 'default') }}
       {% endblock %}
     {% endembed %}
     {% embed "@organisms/section/section.twig" with { columns: 1 } %}
@@ -48,13 +48,13 @@
         {% include "@atoms/rich-text/rich-text.twig" with { text: "<h2 class=text-center>Cards</h2>" }%}
       {% endblock %}
       {% block column_1 %}
-        {{ pattern_preview('card', '', {'image': 'https://satyr.io/460x402'}) }}
+        {{ pattern_preview('card', 'default', {'image': 'https://satyr.io/460x402'}) }}
       {% endblock %}
       {% block column_2 %}
-        {{ pattern_preview('card', '', {'image': 'null'}) }}
+        {{ pattern_preview('card', 'default', {'image': 'null'}) }}
       {% endblock %}
       {% block column_3 %}
-        {{ pattern_preview('card', '', {'image': 'null'}) }}
+        {{ pattern_preview('card', 'default', {'image': 'null'}) }}
       {% endblock %}
     {% endembed %}
   {% endblock %}
