--- a/starter-kits/tailwind/source/default/patterns/01-atoms/logo/logo.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/logo/logo.twig
@@ -9,10 +9,6 @@
 
 {# TEMPLATE #}
 <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900" href="{{ path('<front>') }}">
-  <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round"
-       stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-pink-500 rounded-full"
-       viewBox="0 0 24 24">
-    <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-  </svg>
-  <span class="ml-3 text-xl">tailblocks</span>
+  <img src="{{ file_url('ws-assets://images/logo.svg') }}" alt="Brand Logo" class="w-14">
+  <span class="ml-3 text-l">BRAND EXAMPLE</span>
 </a>
