(feature) Add support to enable/disable referenced patterns.

--- a/starter-kits/tailwind/apps/storybook/patterns/05-pages/homepage/homepage.twig
+++ b/starter-kits/tailwind/apps/storybook/patterns/05-pages/homepage/homepage.twig
@@ -23,7 +23,7 @@
         {{ pattern_preview('card', 'default', {'headline': ' Second Card'}) }}
       {% endblock %}
       {% block column_3 %}
-        {{ pattern_preview('card', 'default') }}
+        {{ pattern_preview('card', 'default', {'headline': 'Overwritten headline', 'image': null}) }}
       {% endblock %}
     {% endembed %}
     {% embed "@organisms/section/section.twig" with { columns: 1 } %}
