(feature) Add language select and headlines as variants.

--- a/starter-kits/tailwind/apps/drupal/templates/layout/html.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/layout/html.html.twig
@@ -33,7 +33,7 @@
 
   </head>
   <body{{ attributes }}
-    x-data="{ isScrollDown: false, menuIsOpen: false }" x-on:drupalViewportOffsetChange.window="console.log('XX')" x-on:scroll.window="isScrollDown = (window.pageYOffset > 5) ? true : false; "
+    x-data="{ isScrollDown: false, menuIsOpen: false, languageSwitcherOpen: false }" x-on:scroll.window="isScrollDown = (window.pageYOffset > 5) ? true : false; "
   >
     {#
       Keyboard navigation/accessibility link to main content section in
