--- a/starter-kits/tailwind/apps/storybook/patterns/05-pages/article/article.twig
+++ b/starter-kits/tailwind/apps/storybook/patterns/05-pages/article/article.twig
@@ -1,6 +1,7 @@
 {% embed "@templates/site-container.twig"
   with {
   has_spacer: true,
+  language_select: pattern_preview('language_select'),
   primary_menu: pattern_preview('menu', 'primary'),
   footer_menu_1: pattern_preview('menu', 'footer'),
   footer_menu_2: pattern_preview('menu', 'footer'),
