--- a/starter-kits/tailwind/apps/storybook/patterns/05-pages/homepage/homepage.twig
+++ b/starter-kits/tailwind/apps/storybook/patterns/05-pages/homepage/homepage.twig
@@ -1,6 +1,7 @@
 {% embed "@templates/site-container.twig"
   with {
   primary_menu: pattern_preview('menu', 'primary'),
+  language_select: pattern_preview('language_select'),
   footer_menu_1: pattern_preview('menu', 'footer'),
   footer_menu_2: pattern_preview('menu', 'footer'),
   footer_menu_3: pattern_preview('menu', 'footer'),
