--- a/starter-kits/tailwind/source/default/patterns/04-templates/article/article.twig
+++ b/starter-kits/tailwind/source/default/patterns/04-templates/article/article.twig
@@ -2,7 +2,8 @@
   {% block content %}
   <div class="text-center w-1/2 m-auto text-gray-dark">
     {% include "@atoms/headline/headline.twig" with {
-      content: headline
+      content: headline,
+      variant: 'h1'
     } only %}
   </div>
   <div class="block md:flex group hover:no-underline pt-10">
