--- a/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
@@ -1,8 +1,55 @@
-<div>
-  <div class="mb-4">{{ image }}</div>
-  <div class="mb-2
-     {{ text_align == 'center' ? 'text-center' }}
-     {{ text_align == 'right' ? 'text-right' }}
-    ">{{ headline }}</div>
-  <div>{{ button }}</div>
+{# SETTINGS #}
+{% set element = element|default('article') %}
+{% set headline__element = headline__element|default('h2') %}
+{% if url is not empty %}
+  {% set attributes = attributes.setAttribute('href', url) %}
+  {% set element = 'a' %}
+{% endif %}
+
+{# CARD CLASSES #}
+{% set link_classes = ([
+  alignment == 'center' ? 'mx-auto': '',
+  'text-indigo-500', 'inline-flex', 'md:mb-2', 'lg:mb-0',
+]) | sort | join(' ') | trim %}
+
+{% set classes = ([
+  alignment == 'center' ? 'text-center rounded': '',
+  bg_color == 'gray' ? 'bg-gray-200',
+  bg_color == 'blue' ? 'bg-blue-200',
+  'w-full flex  max-w-xl',
+  'border-2 border-gray-200 rounded-lg overflow-hidden w-full',
+  variant == 'horizontal' ? 'flex-col md:flex-row' : 'flex-col'
+] | sort | join(' ') | trim ) %}
+
+{% set attributes = attributes|default(create_attribute()).addClass(classes) %}
+
+{# TEMPLATE #}
+<{{ element }} {{ attributes }}>
+{% if image is not empty %}
+  <div class="flex-1">
+    {% block image %}
+      {{ image }}
+    {% endblock %}
+  </div>
+{% endif %}
+<div class="p-6 flex-1">
+  <div class="tracking-widest text-lg title-font font-medium text-gray-500 mb-1">
+    {% block preheadline %}
+      {{ preheadline }}
+    {% endblock %}
+  </div>
+  {% block headline %}
+    {{ headline }}
+  {% endblock %}
+  <div class="leading-relaxed mb-3">
+    {% block text %}
+      {{ text }}
+    {% endblock %}
+  </div>
+  <div class="{{ link_classes }}">
+    {% block link %}
+      {{ link }}
+    {% endblock %}
+  </div>
 </div>
+</{{ element }}>
