(feature) Change swiper slider to glide.js.

--- a/starter-kits/tailwind/source/default/patterns/01-atoms/rich-text/rich-text.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/rich-text/rich-text.twig
@@ -9,6 +9,6 @@
 #}
 
 {# TEMPLATE #}
-<div class="prose lg:prose-lg max-w-none">
+<div class="prose dark:prose-dark lg:prose-lg max-w-none">
   {{ text }}
 </div>
