--- a/starter-kits/tailwind/source/default/patterns/03-organisms/slider/slider.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/slider/slider.twig
@@ -6,16 +6,33 @@
  * See slider.wingsuit.yaml for documentation.
  */
 #}
-<div>
-  <div class="swiper-container">
-    <div class="swiper-wrapper">
-      {% for item in items %}
-        <div class="swiper-slide">{{ item }}</div>
-      {% endfor %}
+{% embed "@organisms/container/container.twig" with {
+  padding_top: padding_top,
+  padding_bottom: padding_bottom,
+  bg: bg,
+  variant: variant,
+  autoplay: autoplay,
+  content: items,
+  width: width,
+} only %}
+  {% block content %}
+    <div class="glide overflow-hidden" data-slides-per-view="{{ variant }}" data-autoplay="{{ autoplay }}">
+      <div class="glide__track" data-glide-el="track">
+        <ul class="glide__slides">
+        {% for key, item in content %}
+          {% if key != "region_label" %}
+            <li class="glide__slide flex-shrink-0">{{ item }}</li>
+          {% endif %}
+        {% endfor %}
+        </ul>
+      </div>
+      <div class="glide__bullets" data-glide-el="controls[nav]">
+        {% for key in content|keys %}
+          {% if key != "region_label" %}
+            <button class="glide__bullet" data-glide-dir="={{ loop.index0 -1 }}"></button>
+          {% endif %}
+        {% endfor %}
+      </div>
     </div>
-    <!-- Add Arrows -->
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div>
-  </div>
-</div>
+  {% endblock %}
+{% endembed %}
