--- a/starter-kits/tailwind/source/default/patterns/01-atoms/headline/headline.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/headline/headline.twig
@@ -1,20 +1,20 @@
 {# SETTING #}
 {% set attributes = attributes|default(create_attribute()) %}
-{% set element = element|default('div') %}
-{% set size = size|default('large') %}
+{% set tag_name = tag_name|default('div') %}
+{% set spacing_bottom = spacing_bottom|default('default') %}
 
 {%
   set classes = ([
-  'headline text-gray-500 dark:text-gray-50 font-serif',
-  pattern_configuration('headline', variant, 'size')[variant],
+  'headline text-gray-500 dark:text-gray-50 font-sans',
+  pattern_configuration('headline', variant, 'size'),
   pattern_configuration('headline', variant, 'spacing_bottom')[spacing_bottom],
   classes,
 ]) | sort | join(' ') | trim
 %}
 
 {# TEMPLATES #}
-<{{ element }} {{ attributes.addClass(classes) }}>
+<{{ tag_name }} {{ attributes.addClass(classes) }}>
 {{ title_prefix }}
   {{ title_suffix }}
-  {{ content }}
-</{{ element }}>
+  {{ headline }}
+</{{ tag_name }}>
