--- a/starter-kits/tailwind/source/default/patterns/01-atoms/logo/logo.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/logo/logo.twig
@@ -8,7 +8,6 @@
 #}
 
 {# TEMPLATE #}
-<a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900" href="{{ path('<front>') }}">
-  <img src="{{ file_url('ws-assets://images/logo.svg') }}" alt="Brand Logo" class="w-14">
-  <span class="ml-3 text-l">BRAND EXAMPLE</span>
+<a class="pr-8 block" href="{{ path('<front>') }}">
+  <img src="{{ file_url('ws-assets://images/logo.svg') }}" alt="Brand Logo" class="w-80">
 </a>
