--- a/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.twig
@@ -13,9 +13,9 @@
   <div class="flex md:flex-row flex-col items-center">
     <div
       class="flex flex-col pt-8 items-center text-center md:w-1/2 md:pr-16 md:items-start md:text-left mb-16 md:mb-0 lg:flex-grow lg:pr-24">
-      <div class="uppercase tracking-loose w-full">{{ pre_headline }}</div>
-      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">{{ headline }}</h1>
-      <div class="mb-8 leading-relaxed">{{ text }}</div>
+      <div class="uppercase tracking-loose font-medium w-full mb-4">{{ pre_headline }}</div>
+      {% include "@atoms/headline/headline.twig" with {headline: headline, variant: 'h3', tag_name: 'h1' } %}
+      <div class="mb-8 font-medium leading-relaxed text-l max-w-sm">{{ text }}</div>
       <div class="flex justify-center">
         <div class="mr-5">{{ button }}</div>
         <div>{{ button_second }}</div>
