--- a/starter-kits/tailwind/source/default/tokens/tokens.css
+++ b/starter-kits/tailwind/source/default/tokens/tokens.css
@@ -1,35 +1,45 @@
+/* poppins-regular - latin */
 @font-face {
-  font-family: 'SourceSerif';
-  src: local('Source Serif'),
-    url('fonts/source-serif/SourceSerifPro-Regular.woff2') format('woff2'),
-    url('fonts/source-serif/SourceSerifPro-Regular.woff') format('woff');
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
-  font-display: auto;
+  src: url('fonts/poppins/poppins-v15-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+  url('fonts/poppins/poppins-v15-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('fonts/poppins/poppins-v15-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('fonts/poppins/poppins-v15-latin-regular.woff') format('woff'), /* Modern Browsers */
+  url('fonts/poppins/poppins-v15-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('fonts/poppins/poppins-v15-latin-regular.svg#Poppins') format('svg'); /* Legacy iOS */
 }
-
+/* poppins-500 - latin */
 @font-face {
-  font-family: 'SourceSerif';
-  src: local('Source Serif'),
-    url('fonts/source-serif/SourceSerifPro-Bold.woff') format('woff'),
-    url('fonts/source-serif/SourceSerifPro-Bold.woff2') format('woff2');
+  font-family: 'Poppins';
   font-style: normal;
-  font-weight: 600;
-  font-display: auto;
+  font-weight: 500;
+  src: url('fonts/poppins/poppins-v15-latin-500.eot'); /* IE9 Compat Modes */
+  src: local(''),
+  url('fonts/poppins/poppins-v15-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('fonts/poppins/poppins-v15-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+  url('fonts/poppins/poppins-v15-latin-500.woff') format('woff'), /* Modern Browsers */
+  url('fonts/poppins/poppins-v15-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('fonts/poppins/poppins-v15-latin-500.svg#Poppins') format('svg'); /* Legacy iOS */
 }
-
+/* poppins-700 - latin */
 @font-face {
-  font-family: 'Roboto';
-  src: local('Roboto'),
-    url('fonts/roboto/roboto-v20-latin-regular.woff2') format('woff2'),
-    url('fonts/roboto/roboto-v20-latin-regular.woff') format('woff');
+  font-family: 'Poppins';
   font-style: normal;
-  font-weight: 400;
-  font-display: auto;
+  font-weight: 700;
+  src: url('fonts/poppins/poppins-v15-latin-700.eot'); /* IE9 Compat Modes */
+  src: local(''),
+  url('fonts/poppins/poppins-v15-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('fonts/poppins/poppins-v15-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+  url('fonts/poppins/poppins-v15-latin-700.woff') format('woff'), /* Modern Browsers */
+  url('fonts/poppins/poppins-v15-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('fonts/poppins/poppins-v15-latin-700.svg#Poppins') format('svg'); /* Legacy iOS */
 }
 
 body {
-  font-family: 'Roboto';
+  font-family: 'Poppins';
   color: #4a4a4a;
 }
 
