--- a/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.twig
@@ -7,8 +7,11 @@
  */
 #}
 
-{# SETTINGS #}
+{# Defaults #}
 {% set width = width|default('default') %}
+{% set padding_x = width|default('padding_x') %}
+
+{# SETTINGS #}
 {% set bg_classes = ([
   pattern_configuration('container', '', 'bg')[bg],
 ] | sort | join(' ') | trim )%}
