--- a/starter-kits/tailwind/apps/drupal/templates/layout/page--user.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/layout/page--user.html.twig
@@ -47,7 +47,10 @@
 #}
 {% extends "page.html.twig" %}
   {% block main %}
-    {% embed "@organisms/container/container.twig" %}
+    {% embed "@templates/basic/basic.twig" with {width: 'small' } %}
+      {% block headline %}
+        Welcome to <br>the Peach Company!
+      {% endblock %}
       {% block content %}
         {{ page.content }}
       {% endblock %}
