--- a/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
@@ -3,6 +3,7 @@
 #}
 {% set tag_name = tag_name|default('div') %}
 {% set color = color|default('primary') %}
+{% set size = size|default('default') %}
 {% set attributes = attributes|default(create_attribute()) %}
 {% set icon_size = icon_size|default('default') %}
 {% set icon_alignment = icon_alignment|default('right') %}
