--- a/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.twig
@@ -9,7 +9,7 @@
 
 {# Defaults #}
 {% set width = width|default('default') %}
-{% set padding_x = width|default('padding_x') %}
+{% set padding_x = width != 'full' ? padding_x|default('default') : '' %}
 
 {# SETTINGS #}
 {% set bg_classes = ([
