--- a/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.twig
@@ -13,7 +13,7 @@
 {% endif %}
 
 {%- set header -%}{%- block header -%}{{ header }}{% endblock %}{% endset %}
-{% set region_attributes = region_attributes|default([]) %}
+{% set region_attributes = region_attributes|default(create_attribute()) %}
 {% set grid %}
   {%- set column_1 -%}{%- block column_1 -%}{{ _context['column_1' ] }}{% endblock %}{% endset %}
   {%- set column_2 -%}{%- block column_2 -%}{{ _context['column_2' ] }}{% endblock %}{% endset %}
@@ -25,14 +25,20 @@
     {% set cells = cells|merge([_context['column_' ~ i ]]) %}
   {% endfor %}
   {% set columns_width = columns_width|default(_context['columns_width_' ~ columns ]) %}
-  {% embed "@organisms/grid/grid.twig" with {attributes: create_attribute(), cells: cells, columns_width: columns_width} %}
+  {% embed "@organisms/grid/grid.twig" with {
+    attributes: create_attribute(),
+    cells: cells,
+    columns_width: columns_width,
+    region_attributes: region_attributes
+  }
+  %}
     {#
       Layout Builder regions attributes should be part of the section cell.
     #}
     {% block cell_outer %}
-      {% set column_name = 'column_' ~ column_i %}
+      {% set column_name = 'column_' ~ (cell_counter + 1) %}
       {% set current_region_attributes = region_attributes[column_name]|default(create_attribute()) %}
-      <div class="{{ current_region_attributes.class }}" {{ current_region_attributes|without('class') }}>
+      <div{{ current_region_attributes }}>
           {{ cell }}
       </div>
     {% endblock %}
