(fix) Add region attributes to card and hero pattern.

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
@@ -33,7 +33,7 @@
   </div>
 {% endif %}
 <div class="p-6 flex-1">
-  <div class="tracking-widest text-lg title-font font-medium text-gray-500 mb-1 {{ region_attributes.preheadline.class }}">
+  <div{{ region_attributes.preheadline|default(create_attribute()).addClass('tracking-widest text-lg title-font font-medium text-gray-500 mb-1') }}>
     {% block preheadline %}
       {{ preheadline }}
     {% endblock %}
@@ -42,12 +42,12 @@
   {% block headline %}
     {{ headline }}
   {% endblock %}
-  <div class="leading-relaxed mb-3 {{ region_attributes.text.class }}">
+  <div{{ region_attributes.text.addClass('leading-relaxed mb-3') }}>
     {% block text %}
       {{ text }}
     {% endblock %}
   </div>
-  <div class="{{ link_classes }} {{ region_attributes.link.class }}">
+  <div{{ region_attributes.link.addClass(link_classes) }}>
     {% block link %}
       {{ link }}
     {% endblock %}
