Degrease container default size.

--- a/starter-kits/tailwind/source/default/patterns/01-atoms/headline/headline.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/headline/headline.twig
@@ -5,7 +5,7 @@
 
 {%
   set classes = ([
-  'headline text-gray-500 dark:text-gray-50 font-sans',
+  'headline dark:text-gray-50 font-sans',
   pattern_configuration('headline', variant, 'size'),
   pattern_configuration('headline', variant, 'spacing_bottom')[spacing_bottom],
   classes,
