(fix) Fix pattern generation new line issue.

--- a/packages/cli/src/generators/component/templates/ds/base/index.js.ejs
+++ b/packages/cli/src/generators/component/templates/ds/base/index.js.ejs
@@ -3,6 +3,4 @@
  */
 import './<%= name %>.twig';
 import './<%= name %>.wingsuit.yml';
-<% if (useCss) { %>import './<%= name %>.css';<% } %>
-<% if (useScss) { %>import './<%= name %>.scss';<% } %><% if (useJs) { %>
-import './<%= name %>.behavior';<% } %>
+<% if (useCss) { %>import './<%= name %>.css';<%="\n"%><% } %><% if (useScss) { %>import './<%= name %>.scss';<%="\n"%><% } %><% if (useJs) { %>import './<%= name %>.behavior';<%="\n"%><% } %>
